exports[`ClickOutsideHOC should add a className to the div container if the prop clickOutsideClassName is present 1`] = `
<div
  className="test">
  <MockClass />
</div>
`;

exports[`ClickOutsideHOC should pass all props except clickOutsideClassName and onClickOutside to the WrappedComponent 1`] = `
<MockClass
  testProp={1}>
  <div>
    Mock
  </div>
</MockClass>
`;

exports[`ClickOutsideHOC should render correctly, only accepting a stateless functional component or standard ES6 class component to enhance 1`] = `
"Expected \"WrappedComponent\" provided as the first argument to ClickOutsideHOC
        to be a function. Instead, received object."
`;

exports[`ClickOutsideHOC should render correctly, only accepting a stateless functional component or standard ES6 class component to enhance 2`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }>
  <MockClass />
</div>
`;

exports[`ClickOutsideHOC should render correctly, only accepting a stateless functional component or standard ES6 class component to enhance 3`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }>
  <MockStateless />
</div>
`;
